--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
+   
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -26,11 +27,15 @@
     "@nestjs/platform-express": "^11.0.1",
     "@supabase/supabase-js": "^2.52.1",
     "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "dotenv": "^17.2.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "stripe": "^18.3.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
